tests/valid/trait/assoc_projection_closure_signature_compat.facet
trait Iterator {
  type Item;
}

impl Iterator for unrestricted isize {
  type Item = isize;
}

fn main() -> unrestricted isize {
  let f: unrestricted closure<'static>(unrestricted <unrestricted isize as Iterator>::Item) -> unrestricted <unrestricted isize as Iterator>::Item = closure [](x: unrestricted <unrestricted isize as Iterator>::Item) -> unrestricted <unrestricted isize as Iterator>::Item { x } in
  (f 1)
}
