tests/invalid/closure/mutable_capture.facet
fn main() -> unrestricted isize {
    let mut y: unrestricted isize = 7 in
    let f = closure [y](x: unrestricted isize) -> unrestricted isize { y } in
    (f 1)
}
